feat: story struture

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -6,6 +6,7 @@
   text-align: center;
   white-space: nowrap;
   justify-content: center;
+  border-radius: 8px;
 
   &--primary {
     color: #fff;
