--- a/src/styles/_story.scss
+++ b/src/styles/_story.scss
@@ -1,6 +1,29 @@
+@use 'variables';
+
 .story {
-  padding: 80px 0;
-  background-image: linear-gradient(#00FF00, #00BFFF);
+  padding: 40px 0;
+
+  &--parte1 {
+    background-image: linear-gradient(variables.$green1, variables.$green2);
+  }
+
+  &--parte2 {
+    background-image: linear-gradient(variables.$green2, variables.$blue1);
+  }
+
+  &--parte3 {
+    background-image: linear-gradient(variables.$blue1, variables.$blue2);
+  }
+
+  &--parte4 {
+    background-image: linear-gradient(variables.$blue2, variables.$blue1);
+  }
+
+  &--image-left {
+    .container {
+      flex-direction: row-reverse;
+    }
+  }
 
   .container {
     display: flex;
