--- a/src/styles/components/_infos_bar.scss
+++ b/src/styles/components/_infos_bar.scss
@@ -1,3 +1,5 @@
+@use '../variables';
+
 .infos-bar {
   padding: 16px 24px;
   background-color:rgba(255, 255, 255, .5);
@@ -12,11 +14,11 @@
     &__item {
       font-size: 14px;
       line-height: 24px;
-      color: #000;
-
+      color: variables.$secondaryTextColor;
+      
       b {
         font-size: 18px;
-        color: #000;
+        color: variables.$secondaryTextColor;
         display: block;
       }
     }
