--- a/src/styles/_story.scss
+++ b/src/styles/_story.scss
@@ -16,7 +16,7 @@
   }
 
   &--parte4 {
-    background-image: linear-gradient(variables.$blue2, variables.$blue1);
+    background-image: linear-gradient(variables.$blue2, variables.$green2);
   }
 
   &--image-left {
