--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,6 +1,7 @@
 @use '../variables';
 
 .button {
+  display: flex;
   padding: 12px;
   font-size: 18px;
   font-weight: bold;
@@ -9,6 +10,7 @@
   white-space: nowrap;
   justify-content: center;
   border-radius: 8px;
+  align-items: center;
 
   &--primary {
     color: #fff;
