--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -7,3 +7,19 @@
 #confirmacaoLabel {
   font-weight: bold;
 }
+
+@media (max-width: 640px) {
+  .modal-dialog {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (max-width: 1024px) {
+  .modal-dialog {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
