--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,9 @@
 $textColor: #fff;
 $secondaryTextColor: #000;
 
-$green1: #7FFF00;
-$green2: #00CED1;
-$green3: rgb(51, 151, 51);
-$blue1: #00BFFF;
-$blue2: #ADD8E6;
+$backColor1: #82a9d8;
+$backColor2: #f7f8b4;
+$backColor3: #f89696;
+$backColor4: #9ef799;
+$backColor5:#ffb973;
+$modalColor: rgb(123, 192, 123);
