--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -1,7 +1,7 @@
 @use 'variables';
 
 .confirm {
-  background-color: variables.$green3;
+  background-color: variables.$modalColor;
 }
 
 #confirmacaoLabel {
