--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,4 +6,5 @@ $backColor2: #f7f8b4;
 $backColor3: #f89696;
 $backColor4: #9ef799;
 $backColor5:#ffb973;
+$buttonColor: #008000;
 $modalColor: rgb(123, 192, 123);
